--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-beautifulsoup4==4.7.1
-libvirt-python==10.5.0
-meson==1.7.0
-pycairo==1.16.2
-pydbus==0.6.0
-PyGObject==3.30.4
-PyQt5==5.15.2
-python-dateutil==2.7.3
-pytz==2019.1
-pyxdg==0.25
-PyYAML==5.1.2
-requests==2.22.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+charset-normalizer==3.4.1
+matplotlib==3.10.0
+more-itertools==10.6.0
+nltk==3.9.1
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+regex==2024.11.6
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
+six==1.17.0
